src/objects/ADvendio__Call_Report__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Duration_min__c</fullName>
        <label>Duration (min)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Event__c</fullName>
        <label>Event</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Media_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Objectives__c</fullName>
        <label>Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Reason_of_report__c</fullName>
        <label>Reason of report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer care</fullName>
                </value>
                <value>
                    <fullName>Potential analysis</fullName>
                </value>
                <value>
                    <fullName>Portfolio presentation</fullName>
                </value>
                <value>
                    <fullName>Portfolio presentation premium</fullName>
                </value>
                <value>
                    <fullName>Presentation of campaigns</fullName>
                </value>
                <value>
                    <fullName>Discussion of campaigns</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Road-Show</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Planning of the next quarter, year, fiscal year, campaign</fullName>
                </value>
                <value>
                    <fullName>new marketing goals, upcoming campaigns</fullName>
                </value>
                <value>
                    <fullName>Presentation of special promotion</fullName>
                </value>
                <value>
                    <fullName>annual appraisal</fullName>
                </value>
                <value>
                    <fullName>Briefing</fullName>
                </value>
                <value>
                    <fullName>new dialogue partner</fullName>
                </value>
                <value>
                    <fullName>renewal at clients/Agents</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>activity</fullName>
                </value>
                <value>
                    <fullName>Exhibition visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__next_steps__c</fullName>
        <label>Next steps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create an offer</fullName>
                </value>
                <value>
                    <fullName>Optimise campaign</fullName>
                </value>
                <value>
                    <fullName>Set a due date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Information to a colleague</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Visit Report (deprecated)</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Headline/Theme</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Reports (deprecated)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>